Wrong value of RequestDispatcher.FORWARD_CONTEXT_PATH on root context
* Fixes #9119 - uses proper context path that
  satisfies the root context rules of the servlet
  spec

Signed-off-by: Joakim Erdfelt <joakim.erdfelt@gmail.com>